@@ -1,3 +1,7 @@
+2006-11-20  Ulrich Drepper  <drepper@redhat.com>
+
+	* resolv/mapv4v6addr.h (map_v4v6_address): Optimize a bit.
+
 2006-11-18  Bruno Haible  <bruno@clisp.org>
 
 	* sysdeps/unix/sysv/linux/i386/getgroups.c (__getgroups): Invoke
